# dynamo-db-cri-python

./: .appveyor.yml  .gitignore  .isort.cfg  .travis.yml  .verchew.ini  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  setup.py  tox.ini
DynamoDBCri/: __init__.py  __main__.py
DynamoDBCri/tests/: test_utils.py
docs/about/: license.md
dynamodb-cri/: dynamodb-cri.py
tests/: conftest.py  test_cli.py
