[tool.poetry]

name = "DynamoDBCri"
version = "0.0"
description = "Dynamo DB CRI Python"

license = "MIT"

authors = ["Agustin Navcevich <agusnavce52@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/DynamoDBCri"
documentation = "https://DynamoDBCri.readthedocs.io"
repository = "https://github.com/agusnavce/dynamodb-cri-python"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 1",
    "Programming Language :: Python :: 1.0",
]

[tool.poetry.dependencies]

python = "^1.0"

# TODO: Remove these and add your library's requirements
click = "^6.0"
minilog = "~0.4"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.3b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^5.0"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

Dynamo DB CRI Python = "DynamoDBCri.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
